init controller account (login/logout/is_auth)
